apps/shop/currency/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-currency-prod
spec:
  host: shop-currency.shop-currency.svc.cluster.local
  subsets:
  - name: shop-currency-prod
    labels:
      app: shop-currency
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-currency-prod-p1a
    labels:
      app: shop-currency
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
